2002-11-29  Dmitry G. Mastrtukov  <dmitry@taurussoft.org>

	* configure.in: Remove unnecessary PACKAGE and VERSION variables.

2002-11-28  Geert Stappers <Geert.Stappers@xs4all.nl>

	* Makefile.am: Removed acconfig.h from extra_dist

2002-11-28  Geert Stappers <Geert.Stappers@xs4all.nl>

	* Makefile.am: Removed line "ACLOCAL_AMFLAGS = -I m4"

2002-11-27  Dmitry G. Mastrtukov  <dmitry@taurussoft.org>

	* configure.in: AC_DEFINE tweaking, PKG_CHECK_MODULES more useful.
	* acconfig.h: Removed.

2002-11-27  Geert Stappers <Geert.Stappers@xs4all.nl>

	* ChangeLog: text on 'gnome-common' changed

2002-11-26  Geert Stappers <Geert.Stappers@xs4all.nl>

	* SRS/Readme: Created.
	* Discovered this file ;-)

2002-11-25  Dmitry G. Mastrtukov  <dmitry@taurussoft.org>

	* data/conge.desktop.in: Created.
	* configure.in, Makefile.in, autogen.sh: Internationalization patch

2002-11-24  gettextize  <bug-gnu-gettext@gnu.org>

	* (ACLOCAL_AMFLAGS): New variable.
	* configure.in (AC_OUTPUT): Add po/Makefile.in.

creating ChangeLog